Integração com MBaaS - Firebase
- Implementação da camada PLL, BLL, DLL e DAO da funcionalidade
“Gerenciamento de agendas, históricos e tipos de agenda”;
- Refatoração de código;
- Testes, validação e liberação do aplicativo no “Firebase Hosting”.

--- a/desenvolvimento/hibrido/app/pages/agenda/agenda.component.html
+++ b/desenvolvimento/hibrido/app/pages/agenda/agenda.component.html
@@ -18,12 +18,7 @@
 
 <ion-content class="agenda cards-bg">
 
-  <ion-refresher (ionRefresh)="sincronizar($event)">
-    <ion-refresher-content pullingText="Puxe para sincronizar" refreshingText="Carregando...">
-    </ion-refresher-content>
-  </ion-refresher>
-  
-  <ion-card *ngFor="let agenda of _agendaService.agendas | async | agendaFilter:filtro">
+  <ion-card *ngFor="let agenda of _service.agendas | async | agendaFilter:filtro">
     <ion-item>
       <ion-icon name='calendar' item-left></ion-icon>
       <h2>{{agenda.tipoAgenda.descricao}}</h2>
