--- a/desenvolvimento/hibrido/app/pages/mapa-ponto-interesse/mapa-ponto-interesse.component.html
+++ b/desenvolvimento/hibrido/app/pages/mapa-ponto-interesse/mapa-ponto-interesse.component.html
@@ -12,8 +12,8 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="mapa">
-  
+<ion-content class="mapa-ponto-interesse">
+
   <ion-list>
     <ion-item>
       <ion-label>Ponto de Interesse</ion-label>
@@ -29,6 +29,6 @@
       <ion-input type="text" placeholder="Ex. Av. presidente vargas ou São Paulo"></ion-input>
     </ion-item>
   </ion-list>
-  <div id="map"></div>
+  <div id="map-ponto-interesse"></div>
 
 </ion-content>
