--- a/desenvolvimento/hibrido/app/pages/mapa-rota/mapa-rota.component.html
+++ b/desenvolvimento/hibrido/app/pages/mapa-rota/mapa-rota.component.html
@@ -12,9 +12,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="mapa">
-  
-  <ion-list>
+<ion-content class="mapa-rota">
+
+  <!--<ion-list>
     <ion-item>
       <ion-label>Ponto de Interesse</ion-label>
       <ion-select [(ngModel)]="pontoInteresse">
@@ -28,7 +28,7 @@
     <ion-item>
       <ion-input type="text" placeholder="Ex. Av. presidente vargas ou São Paulo"></ion-input>
     </ion-item>
-  </ion-list>
-  <div id="map"></div>
+  </ion-list>-->
+  <div id="map-rota"></div>
 
 </ion-content>
