--- a/desenvolvimento/hibrido/app/pages/rota/rota.component.html
+++ b/desenvolvimento/hibrido/app/pages/rota/rota.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content class="rota cards-bg">
-    <div *ngFor="let rota of agenda.rotas">
+    <div *ngFor="let rota of rotas">
         <ion-card>
             <ion-item no-padding>
                 <ion-icon name='car' item-left></ion-icon>
