--- a/desenvolvimento/hibrido/app/pages/usuario/usuario-login.component.html
+++ b/desenvolvimento/hibrido/app/pages/usuario/usuario-login.component.html
@@ -75,6 +75,6 @@
 
 </ion-content>
 
-<button fab light fab-bottom fab-center style="z-index: 100" (click)="pular()">
+<!--<button fab light fab-bottom fab-center style="z-index: 100" (click)="pular()">
   PULAR
-</button>
+</button>-->
