--- a/desenvolvimento/hibrido/app/pages/mapa/mapa.component.scss
+++ b/desenvolvimento/hibrido/app/pages/mapa/mapa.component.scss
@@ -1,17 +1,17 @@
-.mapa {
+.mapa, .mapa-agenda, .mapa-ponto-interesse, .mapa-rota {
 
   ion-content {
     background: rgb(229, 227, 223);
   }
 
-  #map {
+  #map, #map-agenda, #map-ponto-interesse, #map-rota {
     width: 100%;
     height: 100%;
     opacity: 0;
     transition: opacity 150ms ease-in
   }
 
-  #map.show-map {
+  #map.show-map, #map-agenda.show-map, #map-ponto-interesse.show-map, #map-rota.show-map {
     opacity: 1;
   }
   
