--- a/desenvolvimento/dashboard/src/app/app.component.html
+++ b/desenvolvimento/dashboard/src/app/app.component.html
@@ -1,9 +1,1 @@
-<md-toolbar color="primary">
-  <button md-icon-button>
-    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-      <path fill="currentColor" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-    </svg>
-  </button> 
-  {{title}}
-</md-toolbar>
-<md-progress-bar mode="indeterminate"></md-progress-bar>
+<router-outlet></router-outlet>
