Integração com Firebase 3, AngularFire2 e Underscore
Integração com Banco de dados NoSQL
- Integração com AngularFire2 e Firebase 3;
- Integração com underscore;
- Definição e implementação de cadastro de tipos de agendas e a
configuração do mesmo no Firebase;
- Definição de regras de dados no Firebase.

--- a/desenvolvimento/dashboard/src/app/+login/login.component.html
+++ b/desenvolvimento/dashboard/src/app/+login/login.component.html
@@ -14,7 +14,7 @@
   <main>
     <form #frm="ngForm" (ngSubmit)="onSubmit(frm.value)">
       <md-card class="md-input-card">
-        <md-toolbar color="primary">Partiu!</md-toolbar>
+        <md-toolbar color="primary">{{ title }}</md-toolbar>
         <md-card-content>
           <md-input name="email" type="email" placeholder="E-mail" autocomplete="off" required #email ngModel>
             <span md-prefix><md-icon>perm_identity</md-icon></span>
