--- a/desenvolvimento/dashboard/src/app/app.component.html
+++ b/desenvolvimento/dashboard/src/app/app.component.html
@@ -1,3 +1,4 @@
+<partiu-progress-bar></partiu-progress-bar>
 <router-outlet></router-outlet>
 <partiu-toast></partiu-toast>
 <partiu-modal></partiu-modal>
