--- a/desenvolvimento/dashboard/src/app/+tipo-dado/tipo-dado.component.html
+++ b/desenvolvimento/dashboard/src/app/+tipo-dado/tipo-dado.component.html
@@ -1,6 +1,6 @@
 <partiu-cadastro
-    [(items)]="_tipoAgendaService.list"
-    [(item)]="tipoAgenda"
+    [(items)]="_tipoDadoService.list"
+    [(item)]="tipoDado"
     [(editing)]="editing"
     [showIcone]="showIcone"
     [showDestaque]="showDestaque"
