--- a/desenvolvimento/dashboard/src/app/+tipo-transporte/tipo-transporte.component.html
+++ b/desenvolvimento/dashboard/src/app/+tipo-transporte/tipo-transporte.component.html
@@ -1,6 +1,6 @@
 <partiu-cadastro
-    [(items)]="_tipoAgendaService.list"
-    [(item)]="tipoAgenda"
+    [(items)]="_tipoTransporteService.list"
+    [(item)]="tipoTransporte"
     [(editing)]="editing"
     [showIcone]="showIcone"
     [showDestaque]="showDestaque"
