--- a/desenvolvimento/dashboard/src/app/+tipo-ponto-interesse/tipo-ponto-interesse.component.html
+++ b/desenvolvimento/dashboard/src/app/+tipo-ponto-interesse/tipo-ponto-interesse.component.html
@@ -1,6 +1,6 @@
 <partiu-cadastro
-    [(items)]="_tipoAgendaService.list"
-    [(item)]="tipoAgenda"
+    [(items)]="_tipoPontoInteresseService.list"
+    [(item)]="tipoPontoInteresse"
     [(editing)]="editing"
     [showIcone]="showIcone"
     [showDestaque]="showDestaque"
