--- a/desenvolvimento/dashboard/src/app/+transporte/transporte.component.html
+++ b/desenvolvimento/dashboard/src/app/+transporte/transporte.component.html
@@ -5,7 +5,7 @@
                 <tr>
                     <th style="width:10%">#</th>
                     <th class="mdl-data-table__cell--non-numeric">Descrição</th>
-                    <th class="mdl-data-table__cell--non-numeric">Detalhes</th>
+                    <th class="mdl-data-table__cell--non-numeric">Tipo de Transporte</th>
                     <th class="mdl-data-table__cell--non-numeric" style="width:10%">Editar</th>
                     <th class="mdl-data-table__cell--non-numeric" style="width:10%">Excluir</th>
                 </tr>
